<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.RegisterActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00C27C"
        android:text="@string/register2"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upi_id" />

    <EditText
        android:id="@+id/branch"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/branch_eg_it_ece_mtech"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/semester" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Create Account" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/enrollNo"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enrollment_number"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/semester"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/semester"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enrollNo" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/upi_id"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/upi_id"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <ImageView
        android:id="@+id/backbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>