<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />


    <LinearLayout
        android:id="@+id/enterModeSwitchLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/loginButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="#00C27C"
            android:elevation="4dp"
            android:text="Log in"
            android:textSize="10sp"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/registerButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:elevation="20dp"
            android:text="register"
            android:textColor="#00C27C"
            android:textSize="10sp"
            app:cornerRadius="8dp" />

    </LinearLayout>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="Let's get you Login!"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="Enter your infomation below"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        tools:layout_editor_absoluteY="235dp" />

    <EditText
            android:id="@+id/login_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="290dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@id/rightGuide"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/pass_icon"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@id/rightGuide"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/login_email" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="224dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="#03A168"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:backgroundTint="#00C27C"
            android:text="@string/log_in"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightGuide"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:layout_constraintVertical_bias="0.407" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="40dp"
            android:text="@string/already_have_an_account"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/leftGuide"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.542" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            android:textColor="#03A168"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/rightGuide"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.542" />

</androidx.constraintlayout.widget.ConstraintLayout>