<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.MainActivity2">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />


<!--    <LinearLayout-->
<!--        android:id="@+id/loginConstraint"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintEnd_toEndOf="@id/rightGuide"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="@id/leftGuide"-->
<!--        app:layout_constraintTop_toBottomOf="@id/imageView">-->

    <TextView
        android:id="@+id/loginText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Let's get you Loged In!!"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Enter your infomation below"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/loginText" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/pass_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="#03A168"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/App_colour"
        android:text="@string/log_in"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:text="Register Now"
        android:textColor="#03A168"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:text="Not our Member Yet?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuide" />

    <!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>